fixed extra margin problem on container

--- a/src/scss/modules/_bottle.scss
+++ b/src/scss/modules/_bottle.scss
@@ -2,7 +2,7 @@
   text-align: center;
   padding: 25px 13px 10px 13px;
   img {
-    max-width: 350px;
+    max-width: 100%;
   }
 }
 
